# mev-classifier

./: .gitignore  Cargo.toml  README.md
classifiers/anchor-classifiers/: Cargo.toml
classifiers/anchor-classifiers/idls/: jupiter_v6.json  whirlpools.json
classifiers/anchor-classifiers/src/: jupiter_v6.rs  lib.rs  orca_whirlpools.rs
classifiers/classifier-handler/: Cargo.toml
classifiers/classifier-handler/src/: block.rs  instruction.rs  lib.rs  transaction.rs
classifiers/classifier-trait/: Cargo.toml
classifiers/classifier-trait/src/: lib.rs
classifiers/misc-classifiers/: Cargo.toml
classifiers/misc-classifiers/src/: lib.rs  phoenix_v1.rs  raydium_amm.rs  star_atlas.rs
classifiers/solana-classifier/: Cargo.toml
classifiers/solana-classifier/src/: associated_token_program.rs  compute_budget.rs  lib.rs  system_program.rs  token_program.rs  vote.rs
idls/: jupiter_v6.json  meteora_dlmm.json  phoenix_v1.json  raydium_clmm.json
results/: 1725141751_results.txt  1725144876_results.txt  1725145746_results.txt
