[workspace]
members = ["classifiers/*", "packages/*"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
anchor-lang = { git = "https://github.com/timewarp-hq/anchor", branch = "public-internal" }
solana-client = "=1.18.22"
solana-program = "=1.18.22"
solana-sdk = "=1.18.22"
solana-transaction-status = "=1.18.22"
spl-token = "^4"
