[package]
edition.workspace = true
name = "anchor-classifiers"
version = "0.1.0"

[lib]
crate-type = ["lib"]
name = "anchor_classifiers"

[dependencies]
anchor-lang = { workspace = true }
solana-sdk = { workspace = true }

actions = { version = "0.1.0", path = "../../packages/actions" }
anyhow = "1.0.86"
borsh = "^0.10.3"
macros = { version = "0.1.0", path = "../../packages/macros" }
thiserror = "1.0.63"
classifier-core = { version = "0.1.0", path = "../../packages/classifier-core" }
classifier-trait = { version = "0.1.0", path = "../classifier-trait" }
