[package]
edition.workspace = true
name = "classifier-trait"
version = "0.1.0"

[lib]
crate-type = ["lib"]
name = "classifier_trait"

[dependencies]
actions = { version = "0.1.0", path = "../../packages/actions" }
anyhow = "1.0.86"
classifier-core = { version = "0.1.0", path = "../../packages/classifier-core" }
solana-sdk = { workspace = true }
