[package]
edition.workspace = true
name = "solana-classifier"
version = "0.1.0"

[lib]
crate-type = ["lib"]
name = "solana_classifier"

[dependencies]
actions = { version = "0.1.0", path = "../../packages/actions" }
anyhow = "1.0.86"
bincode = "1.3.3"
borsh = "1.5.1"
classifier-core = { version = "0.1.0", path = "../../packages/classifier-core" }
macros = { version = "0.1.0", path = "../../packages/macros" }
solana-sdk = { workspace = true }
thiserror = "1.0.63"
