[package]
edition.workspace = true
name = "solana-classifier"
version = "0.1.0"

[lib]
crate-type = ["lib"]
name = "solana_classifier"

[dependencies]
solana-sdk = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-token = { workspace = true }

actions = { version = "0.1.0", path = "../../packages/actions" }
anyhow = "1.0.86"
bincode = "1.3.3"
borsh = "1.5.1"
classifier-core = { version = "0.1.0", path = "../../packages/classifier-core" }
classifier-trait = { version = "0.1.0", path = "../classifier-trait" }
macros = { version = "0.1.0", path = "../../packages/macros" }
thiserror = "1.0.63"
anchor-spl = "0.30.1"
